tests/errors/duplicate-arg.au
struct A{}
func (self: A) a(self) {}